# devices-db

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  devices.xlsx  main.py  pyproject.toml  requirements.txt
templates/: base.html  dashboard.html  login.html
